# rust-nes-emulator

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml
desktop/src/: main.rs
src/: cartridge.rs  cpu.rs  lib.rs  main.rs  mapper.rs  nes.rs
src/cpu/: apu.rs  op_codes.rs
src/cpu/apu/: dmc.rs  envelope.rs  frame_counter.rs  noise.rs  pulse.rs  triangle.rs
src/cpu/apu/registers/: control.rs  flags_rate_register.rs  linear_counter.rs  mod.rs  noise_control.rs  status.rs  sweep.rs  timer_high.rs  timer_low.rs
src/cpu/op_codes/: instruction.rs
src/cpu/ppu/: mod.rs  picture.rs
src/cpu/ppu/registers/: address.rs  control.rs  mask.rs  mod.rs  scroll.rs
src/mapper/: cnrom.rs  mmc1.rs  sxrom.rs  txrom.rs  uxrom.rs
src/nes/: cartridge.rs  cpu.rs  wasm_emulator.rs
src/nes/cpu/: op_codes.rs
src/nes/cpu/ppu/: joypad.rs  mod.rs
src/nes/cpu/ppu/registers/: address.rs  control.rs  mod.rs  oam.rs  status.rs
wasm_emulator/: Cargo.toml  index.html  styles.css
wasm_emulator/src/: lib.rs
