[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Anne Castrillon <anne.castrillon@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "2.3.1"
lazy_static = "1.4.0"
strum = "0.24"
strum_macros = "0.24"